tests/ui/privacy/pub-priv-dep/glob-selected-private.stderr
error: type `Shared` from private dependency 'shared' in public interface
  --> $DIR/glob-selected-private.rs:22:1
   |
LL | pub fn selected() -> Selected {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/glob-selected-private.rs:6:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

